# merdeka_app

./: .dockerignore  .env.example  .gitattributes  .gitignore  IMPLEMENTATION_PLAN.md  PRD.md  README.md  docker-compose.yml  package-lock.json  package.json  planning (1).md  planning (2).md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/routers/: admin.py  game.py  guestbook.py  health.py  photos.py
apps/api/app/security/: __init__.py  cloudflare_access.py
apps/api/app/services/: content_filter.py  retention.py
apps/api/migrations/versions/: 20260716_0001_initial.py  20260716_0002_admin_audit.py  20260716_0003_photo_review.py  20260716_0004_game_leaderboard.py  20260717_0005_auto_publication.py
apps/api/tests/: test_admin_schema.py  test_admin_security.py  test_content_filter.py  test_game.py  test_guestbook_schema.py  test_health.py  test_photos.py  test_rate_limit.py
apps/web/: Dockerfile  index.html  package.json  vite.config.ts
apps/web/public/: sw.js
apps/web/src/: AdminApp.test.tsx  AdminApp.tsx  App.test.tsx  App.tsx  main.tsx  styles.css
apps/web/src/components/: BackgroundMusic.tsx  BrandHeader.test.tsx  BrandHeader.tsx  ConnectionStatus.tsx  HopeCarousel.test.tsx  HopeCarousel.tsx  KioskKeyboard.test.tsx  KioskKeyboard.tsx
apps/web/src/data/: timeline.ts
apps/web/src/game/: DinoGame.test.ts  DinoGame.ts
apps/web/src/lib/: api.ts  (+1 more)
deploy/nginx/: default.conf
scripts/: prepare_dino_merdeka_assets.py
(+12 files in other folders)
