[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "merdeka-api"
version = "0.1.0"
description = "FastAPI backend for Gema Kemerdekaan RI UPG kiosk"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi[standard]>=0.116,<1",
  "pillow>=11,<13",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "pyjwt[crypto]>=2.10,<3",
  "sqlalchemy>=2.0,<2.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
